--- a/AdminLabrary/AdminLabrary/View/principales/frmSolicitudes.resx
+++ b/AdminLabrary/AdminLabrary/View/principales/frmSolicitudes.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="Id.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="IdSolicitud.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="Lector.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -132,4 +132,56 @@
   <metadata name="Estado.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="Id_Lector.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Id_Libro.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
+        TUUH5AYBFRMFfZW1dwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAJJSURBVFhH
+        1ZdLqE1hGIZPrmVg4i6MlMvAxMC15FoGBsoAAxlIioGSknI5IgZSDFySMqIkysRAiQyUKBMJKROiJEWI
+        XJ5n661l9Z+jtdpncJ56Bv+7W+/59tr7/P/aPQ2Zgg/xF/4u+Ain4YBxFP1Dn/FDzU/oa8dxwNiL3oGV
+        ndW/LEVf299ZDWaG40Jc0WUXod3/5TJWv1jd9Cr2y1j8gaWLu+FPnIR9shFLF3bTTdgnk/EIHhsg7XYv
+        GRysxtK7aKNdjXmFpc+wjXY15jGm4CPerazjc3xay/Qeek3WT7AxtzAF2w3A4mQ6FcfUsvsoWzHZHYOm
+        XMIUbDOA+iY1GofVsmw2WzDZFYOmnMIU7DGAM5hMSwNcQNmFyU4bNGUfpsBjWHIcx9IAJ1AOYbJeg6Z4
+        21PgOxfvRDItDXAA5SQm22HQlHWYAj97qQ6lpQF2olzEZOsNmrIEU3DTADZgMi0NsBnlOiZbbtCU2ZiC
+        /Gu5oyXT0gBrUW5jsjkGTRmPKXCzkQWYTEsDLEPxATWZh1xjhqLntwVvDGAWplRLA8xFeYnJRhi04T1a
+        8KWz+vswkVItDTAdJde6Jbemus+PxFGVtZYGGIfyHV2/6KxaUt37JxjAN0xWGqA+aL7ArbiGKZphAO8w
+        WX2AryjVj+qGQVvOYYrmGcAzTFYf4C3KTEyWs6EVhzFFqwzgASarD+BwMh+T+UTUGrfVFHnITMTXlcyf
+        aIsra38j+oxwsJLtxtbUd742rsHWDMGz6D5QKu9PrzmPdvRBT88fsKuR8bhk420AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnEditar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
+        TUUH5AYBFRkbfXVgngAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAH/SURBVFhH
+        1de/S5VRHMfxa4KWIYRJ6hCka2NLWkNDf4H4a9GkqVlybMjBTRMncWlpiCCKDCFoSBR0cVJsCNQgmgKR
+        XMS03p/LPfDl3PPce+7puUYfeA3Pc+4533PP8zznPrcQkQuYxBccYRX3cG6Zx2/PMeo6iSvoxzh+wZ+A
+        bGIQ99GAXLOIUNEsmsRf5Q5WoGusvEKoUBathHzHc7QjOipul7kRL81xDF2uIXP8GZcQlU+wg93EY+9c
+        JSfohp4Ue34CUdGy245zaIaW8mfpXJZveIAW6DG1bS8QFdtJTqEV0KWISQfewx9H91FU/I7OPt5CA2X5
+        AH8FHbVHJdQ5D//vBHbgljjWaxzAjqPzUbGd5CpS8gh2nOQJzMLtbLFGsAY7TvIE8hKawC2Moa14VEqo
+        cx70M27zBNpj1KZHvAfF+B3votZo09Klc2MsoQkuU7A15CtuoKwhdQLPoP4xxZ2PCDakWsZFuFQqLocI
+        NqSotbi8QdnJGYQetUoGELvszjauoawhdSNyeQp/TJ9eWLpQjN9Yy1Y8CpuaiytZP6fV6A62y55UXPFf
+        yWJoQ7kOl+TiSh+y3v2zbMDlIUKfsbZQvOGy0ot16B9PaADfAlzeIfQZR9+8E3XLHkKFpe7FW3GGf1Jc
+        uY1Q8arXPK/oD8kP7EL3wjSGcRkRKRT+AOWlA0XmLdboAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnNuevo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
+        TUUH5AYBFR0F4xaY+QAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAADwSURBVFhH
+        7Zc9DgFBHEeXE7iVROEEOtE4DI3ToKHUOIG4AYkGDX5vP5qNyZivSJiXvGRns/l7MZMVRYu5fMinhxc5
+        lkHsJcOO8uDoXRI/kd40Ab1y5UZfXiURU274EBIAwRGhARAUESMAvCNiBYBXRMwAcI6IHQBOESkCYCBv
+        kogRN0ykCoChZPauXBlwDejUfgIzmc1nGHENWMttdWklScC59hN+I4D95ms/1XKqsVlvZFe+I1oAe24K
+        WErToYwS0Ob/zkAb9nxVXVpJEsCB++qLyIUckANyQA5wCvD5c2qTmdaAheShVPLTPZM1RfECPDLWvpm8
+        dm4AAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
