--- a/AdminLabrary/AdminLabrary/View/principales/frmPrincipal.resx
+++ b/AdminLabrary/AdminLabrary/View/principales/frmPrincipal.resx
@@ -2533,7 +2533,7 @@
         9D9iJ2ToFQ5TxQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnSolicitudes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAC8AAAAvCAYAAABzJ5OsAAAAIGNIUk0AAHolAACAgwAA+f8AAIDpAAB1
         MAAA6mAAADqYAAAXb5JfxUYAAAAJcEhZcwAADsQAAA7EAZUrDhsAAARnSURBVGhD7dp7iBVVHMBxe1hp
@@ -2558,7 +2558,7 @@
         /W9fX1rhPDsui61KDjXnBqueN959EK97Kqhv9x82Cwkh2YkzhwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="picLogo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAfAAAAIACAYAAAB91j5iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         EwAACxMBAJqcGAAA/7JJREFUeF7snQeYFceVti9MJCquZdler+317nqT7V2vf3udvZZsK9iyrGBZkpVF
