--- a/AdminLabrary/AdminLabrary/View/principales/frmAdministradores.resx
+++ b/AdminLabrary/AdminLabrary/View/principales/frmAdministradores.resx
@@ -132,21 +132,27 @@
   <metadata name="IDLE.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="EDITAR.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnEditar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="EDITAR.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
-        TUUH5AYBFRkbfXVgngAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAH/SURBVFhH
-        1de/S5VRHMfxa4KWIYRJ6hCka2NLWkNDf4H4a9GkqVlybMjBTRMncWlpiCCKDCFoSBR0cVJsCNQgmgKR
-        XMS03p/LPfDl3PPce+7puUYfeA3Pc+4533PP8zznPrcQkQuYxBccYRX3cG6Zx2/PMeo6iSvoxzh+wZ+A
-        bGIQ99GAXLOIUNEsmsRf5Q5WoGusvEKoUBathHzHc7QjOipul7kRL81xDF2uIXP8GZcQlU+wg93EY+9c
-        JSfohp4Ue34CUdGy245zaIaW8mfpXJZveIAW6DG1bS8QFdtJTqEV0KWISQfewx9H91FU/I7OPt5CA2X5
-        AH8FHbVHJdQ5D//vBHbgljjWaxzAjqPzUbGd5CpS8gh2nOQJzMLtbLFGsAY7TvIE8hKawC2Moa14VEqo
-        cx70M27zBNpj1KZHvAfF+B3votZo09Klc2MsoQkuU7A15CtuoKwhdQLPoP4xxZ2PCDakWsZFuFQqLocI
-        NqSotbi8QdnJGYQetUoGELvszjauoawhdSNyeQp/TJ9eWLpQjN9Yy1Y8CpuaiytZP6fV6A62y55UXPFf
-        yWJoQ7kOl+TiSh+y3v2zbMDlIUKfsbZQvOGy0ot16B9PaADfAlzeIfQZR9+8E3XLHkKFpe7FW3GGf1Jc
-        uY1Q8arXPK/oD8kP7EL3wjSGcRkRKRT+AOWlA0XmLdboAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAC7UlEQVRIS6WWQUhTcRzH33ubm9saTm1sI6Sh1Iq1skMHkdmmZETBVnSwDrEuTspgdRha4GyrQ4HZ
+        MTSZB71YNNRroWBeOmw4SAUPO8k2YXiok+B+/X+/9R4+n3Mb/uDDe3vv//9+3vv/3/7vcUdUo06n+6lW
+        q/9USZ71uVTqWrka9Xr9b7YFn88H4+PjFeF5Hlj7O9S7QlF4a2tr0Wq1QjQahd3d3YpUK5DC19fXweFw
+        kGBnZwdmZ2chHo8rwHZlBHqGqbRbKlk4dhIFa2trYLFYwGQyKRgbGzssqFcJwmee4/bZPmhV/A+2NXMG
+        gyGJB5xOJ3g8HoIJIRaLScNwHP8F9+t4/ntDnXrv3ZWL8OnaZWjR1++pef4LO8eB3++HUCgkI5VKwcbG
+        BnR0dEB7e7sCHCZRwMhiTt/ZM/Cr101EXQ5ggr8kmJubU1wZsr29DcPDwwo5srKyAtlslgTaUw17V/ue
+        0v6Tc/YiCh7ZW4oaQcjIBOl0GpaWlsqCQlGO4R5vN+gbmvbvfkzA469pcD97S5Iey2lgc1Fk2Q9lArPZ
+        jONZlnA4LAs3NDaDGC5yvuee2D7MoJIE2DGTyZSlUChALpeDG703wWBqBv+Hb7Jwz/P3eAd45a9K0aWS
+        BHiFgUBAxsjICJ1D8vl8zeFYkiAYDNITdRCc0BrCX5Yi5SUJynGScCxJYLPZpAk1Go003jgv3u6eIydU
+        fGpY+zcYVK4kwerqKiQSCWJ5eZmO4T8a23QORBThgqASL+jYxU4STExMQCQSoXVoc3OTjnmvu8GoE0Cr
+        1cCt11Oy8NHRUfEOqhN0dXWB3W6HtrY2mJ+fpyHS1WthKmiFB50mkrh8ASkc+9QkOMzi4iINQXzABi9u
+        N0GdisLoLsU2NQlwYcM7cLlctCwMDQ1RIIa4nBdgcHAQFhYWpPCaBTMzM/QanJycpN/JZBKmp6dha2tL
+        FnqQEw1RNVQl6O/vV7zMq6WiQKPRpI74FKmFYz5bOO4f81EU7yJzeyoAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
